dnl# $Id$

AC_PREREQ(2.59)
AC_INIT([warewulf-nhc], [1.2], [warewulf-devel@lbl.gov])
AC_CONFIG_SRCDIR([.])

AC_PROG_INSTALL
AM_INIT_AUTOMAKE([foreign])

dnl# Try to get SVN revision
SVNVERSION=`svnversion -c | sed 's/^.*://g' 2>/dev/null || echo 0000`
if test "$SVNVERSION" = "0000" ; then
    SVNVERSION=`svnversion 2>/dev/null || echo 0000`
fi
AC_SUBST(SVNVERSION)

AC_OUTPUT([
   Makefile
   warewulf-nhc.spec
])
