dnl# $Id$

AC_PREREQ(2.59)
AC_INIT([warewulf-nhc], [1.4.2], [warewulf-devel@lbl.gov])
AC_CONFIG_SRCDIR([.])

AC_PROG_INSTALL
AM_INIT_AUTOMAKE([foreign])

m4_ifdef([AC_PROG_MKDIR_P], [
  AC_PROG_MKDIR_P
], [
  AM_PROG_MKDIR_P
  MKDIR_P=${mkdir_p}
  AC_SUBST([MKDIR_P])
])#m4_ifdef

dnl# Try to get SVN revision
SVNVERSION=`svnversion -c | sed 's/^.*://g' 2>/dev/null || echo 0000`
if test "$SVNVERSION" = "0000" ; then
    SVNVERSION=`svnversion 2>/dev/null || echo 0000`
elif test "$SVNVERSION" = "exported" ; then
    SVNVERSION=`git show -s --pretty=format:%h 2>/dev/null`
    if test -n "$SVNVERSION" ; then
        SVNVERSION=`git svn find-rev $SVNVERSION`
        if test $? -eq 0 ; then
            if test -z "$SVNVERSION" ; then
                for REV in 1 2 3 4 5 6 7 8 9 10 ; do
                    SVNVERSION=`git svn find-rev HEAD~$REV`
                    test -n "$SVNVERSION" && break
                done
            fi
            if test -n "$SVNVERSION" ; then
                git diff --no-ext-diff --quiet --exit-code || SVNVERSION="${SVNVERSION}M"
            fi
        fi
    fi
    if test -z "$SVNVERSION" ; then
        SVNVERSION="0000"
    fi
fi
AC_SUBST(SVNVERSION)

AC_OUTPUT([
   Makefile
   bench/Makefile
   test/Makefile
   warewulf-nhc.spec
])
